# meatnet-client

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  packets.txt  sync-docs.sh
docs/plans/: 2026-02-21-convex-schema-design.md  2026-02-21-error-handling-design.md  2026-02-21-meatnet-companion-design.md  2026-02-21-sbc-service-design.md  2026-02-21-tech-stack-review.md  2026-02-21-testing-strategy-design.md  2026-02-21-web-app-design.md  2026-03-06-container-runtime-constraints.md  2026-03-06-non-error-handling-followups.md  2026-03-06-operational-readiness-requirements.md  2026-03-06-reliability-contract-design.md  2026-03-06-security-access-outline.md  2026-03-07-ble-transport-abstraction-design.md
docs/plans/phases/: README.md  phase-1-ble-foundation.md  phase-2-raw-data-capture.md  phase-3-protocol-foundation.md
sbc-service/: Cargo.toml  README.md
sbc-service/src/: discovery_cache.rs  main.rs  types.rs
sbc-service/src/ble/: btleplug_backend.rs  constants.rs  mod.rs  transport.rs
src/: decode_advertising_packet.rs  main.rs  types.rs
tests/: decode_advertising_packet.rs
tools/btleplug-spike/: Cargo.toml  README.md
tools/btleplug-spike/src/: main.rs
