[package]
name = "sbc-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
btleplug = "0.11.8"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1.18", features = ["macro-diagnostics"] }
