[package]
name = "btleplug-spike"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
btleplug = "0.11.8"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.18", features = ["macro-diagnostics"] }
